# consultant_bot

./: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  run.py  workflow.py
agents/: agent.py  generator_agent.py  grader_agent.py  grading_agent.py  greeting_agent.py  retrieval_agent.py  summarization_agent.py
data/: chroma_store.py  data.json  links.json  scrapper.py
