[tool.poetry]
name = "consultant-bot"
version = "0.1.0"
description = ""
authors = ["Ahmed Rebei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.3"
beautifulsoup4 = "^4.12.3"
langchain-community = "0.2.1"
loguru = "0.7.2"
langchain = "^0.2.15"
langchain-openai = "^0.1.23"
streamlit = "^1.38.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
